# roscenes

./: README.md  pyproject.toml
roscenes/: check.py  info.py  main.py  record2bag.py
roscenes/common/: calib.py  check.py  constant.py  data_config.py  fix.py  nuscenes_check.py  scene_check.py  utils.py
roscenes/decompress/: __init__.py  decompress.py  main.py  utils.py
roscenes/export/: __init__.py  export copy.py  export.py  main.py  sus.py  utils.py
roscenes/load/: __init__.py  load.py  main.py  sus copy.py  sus.py  utils.py
roscenes/merge/: __init__.py  main.py  merge.py  merge_cml.py
roscenes/nuscenes/: README.md  annotation.py  extraction.py  nuscenes_info.py  nuscenes_objects.py  rule.py  taxonomy.py  utils.py  vehicle.py
roscenes/slice/: __init__.py  base copy.py  base.py  main.py  slice.py  utils.py
roscenes/static/: config.yaml
